--- a/css/holidays.css
+++ b/css/holidays.css
@@ -140,3 +140,298 @@
 	float:left;
 	margin-right:10px;
 }
+
+/*package slider style*/
+
+.slider {
+  width: auto;
+  height: auto;
+  overflow: hidden;
+  border-radius: 3px;
+  position: relative;
+}
+.slider .owl-nav, .slider .owl-dots {
+  display: none;
+}
+.slider:hover .left {
+  visibility: visible;
+  opacity: 1;
+  left: 20px;
+}
+.slider:hover .right {
+  visibility: visible;
+  opacity: 1;
+  right: 20px;
+}
+.slider .item-box {
+  padding: 20px;
+  overflow: hidden;
+  width: 100%;
+  height: 400px;
+  position: relative;
+  border-radius: 3px;
+  background: no-repeat url(http://www.cyw51.com/file/upload/201302/22/18-49-19-74-127.jpg) center center;
+  background-size: cover;
+}
+.slider .item-box:after {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  content: "";
+  display: block;
+  
+}
+.slider .left {
+  position: absolute;
+  z-index: 1;
+  top: 167px;
+  left: -20px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: all ease 0.25s;
+  transform: rotate(0deg);
+  background: url(http://svgshare.com/i/2V9.svg) top left;
+}
+.slider .left:hover {
+  visibility: visible;
+  opacity: 1;
+  left: 20px;
+  background: url(http://svgshare.com/i/2UW.svg) top left;
+  transform: rotate(180deg);
+}
+.slider .left.nonl {
+  left: -20px;
+  opacity: 0;
+  visibility: hidden;
+}
+.slider .right {
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  top: 167px;
+  right: -20px;
+  width: 40px;
+  height: 40px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all ease 0.25s;
+  background: url(http://svgshare.com/i/2V9.svg) top left;
+  transform: rotate(180deg);
+}
+.slider .right:hover {
+  visibility: visible;
+  opacity: 1;
+  right: 20px;
+  background: url(http://svgshare.com/i/2UW.svg) top left;
+  transform: rotate(0deg);
+}
+slider .right.nonr {
+  right: -20px;
+  opacity: 0;
+  visibility: hidden;
+}
+.slider-two {
+  width: auto;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+}
+.slider-two .owl-nav, .slider-two .owl-dots {
+  display: none;
+}
+.slider-two:hover .left-t {
+  visibility: visible;
+  opacity: 1;
+  left: 3px;
+}
+.slider-two:hover .right-t {
+  visibility: visible;
+  opacity: 1;
+  right: 3px;
+}
+.slider-two .item {
+  transition: all ease 0.25s;
+  height: 100px;
+  border-radius: 3px;
+  border: solid 3px #e6ecf2;
+  cursor: pointer;
+  background: no-repeat url(http://www.cyw51.com/file/upload/201302/22/18-49-19-74-127.jpg) center center;
+  background-size: cover;
+}
+.slider-two .item.active {
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.15);
+  border: solid 3px #cc2e38;
+}
+.slider-two .owl-stage {
+  padding: 20px 0;
+}
+.slider-two .left-t {
+  transform: rotate(180deg);
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  top: 23px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all ease 0.25s;
+  width: 40px;
+  height: 95px;
+  background: no-repeat rgba(204, 46, 56, 0.85) url(http://svgshare.com/i/2Vs.svg) center center;
+  left: -40px;
+}
+.slider-two .left-t:hover {
+  visibility: visible;
+  opacity: 1;
+  left: 3px;
+}
+.slider-two .left-t.nonl-t {
+  left: -40px;
+  opacity: 0;
+  visibility: hidden;
+}
+.slider-two .right-t {
+  background: no-repeat rgba(204, 46, 56, 0.85) url(http://svgshare.com/i/2Vs.svg) center center;
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  top: 23px;
+  right: -40px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all ease 0.25s;
+  width: 40px;
+  height: 95px;
+  background-color: rgba(204, 46, 56, 0.85);
+}
+.slider-two .right-t:hover {
+  visibility: visible;
+  opacity: 1;
+  right: 3px;
+}
+.slider-two .right-t.nonr-t {
+  right: -40px;
+  opacity: 0;
+  visibility: hidden;
+}
+.package-tab .nav-tabs .nav-link{
+	color:#000;
+	text-transform:uppercase;
+	font-size:14px;
+	font-weight:700;
+}
+.package-tab .nav-tabs .nav-link.active{
+	background-color:#be1e2d;
+	color:#fff;
+}
+.package-tab .accordion-button:focus{
+	box-shadow:none !important;
+}
+.package-tab .accordion-button{
+	color:#000;
+	font-weight:700;
+	font-size:18px;
+}
+.package-tab .accordion-button:not(.collapsed){
+	color:#000;
+	font-weight:700;
+	font-size:18px;
+}
+.package-tab .accordion-button:not(.collapsed) span.Itinerary-day{
+	background-color:#be1e2d;
+	color:#fff;
+	padding:12px 20px 10px 20px;
+	margin-right:10px;
+	border-radius:40px;
+}
+.package-tab .accordion-button span.Itinerary-day{
+	background-color:#999;
+	color:#fff;
+	padding:12px 20px 10px 20px;
+	margin-right:10px;
+	border-radius:40px;
+}
+.package-tab ul{
+	padding:0px;
+	margin:0px;
+	list-style:none;
+}
+.package-tab li{
+	padding:0px 0px 0px 30px;
+	margin:0px 0px 10px 0px;
+	list-style:none;
+	background:url(../images/check-red.svg) no-repeat left top 5px;
+	background-size:15px;
+}
+.enq-pop-overlay{
+	position:fixed;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	z-index:1000;
+	background-color:rgba(0,0,0,.5);
+	display:none;
+}
+.enq-pop{
+	position:fixed;
+	top:4%;
+	left:0px;
+	right:0px;
+	width:900px;
+	min-height:400px;
+	background-color:#FFF;
+	z-index:1001;
+	margin:0 auto;
+	padding:15px;
+	display:none;
+}
+.enq-head{
+	font-size:25px;
+	font-weight:400;
+	border-bottom:1px #CCCCCC solid;
+	padding:10px 0px 15px 0px;
+}
+.bot-red{
+	color:#B51717;
+}
+.or-txt{
+	width:45px;
+	height:45px;
+	font-size:16px;
+	margin:-40px auto 0 auto;
+	color:#000;
+	text-align:center;
+	border:1px #CCC solid;
+	border-radius:75%;
+	padding:10px;
+	font-weight:600;
+	background-color:#F8F8F8;
+}
+.pop-bg-img{
+	background:url(../images/holidays/thai-01.jpg) no-repeat center center;
+	background-size:cover;
+	min-height:450px;
+}
+.pop-bnr-text{
+	min-height:100px;
+	background-color:rgba(0,0,0,.6);
+}
+.enq-pop .form-control{
+	height:45px;
+	border-radius:0px;
+}
+.popup-close{
+	position:absolute;
+	top:0px;
+	right:0px;
+	width:40px;
+	height:40px;
+	background:url(../images/close-red.svg) no-repeat center center;
+	background-size:35px;
+	cursor:pointer;
+}
