--- a/css/global-responsive-style.css
+++ b/css/global-responsive-style.css
@@ -129,6 +129,14 @@
 .border-top-mob{
 	border-top:1px #F5F5F5 solid;
 }
+
+/*holiday responsive*/
+.holiday-search-wrap{
+	position:static;
+}
+.holiday-search-section h1{
+	font-size:16px !important;
+}
 }
 
 
